;;;; -*- coding: utf-8; fill-column: 78 -*-

changes relative to sbcl-1.4.6:
  * enhancement: better handling of unknown keyword arguments (lp#1750466)
  * bug fix: Compiling a SLEEP call with a float positive infinity argument no
    longer causes an internal error (lp#1754081)
  * bug fix: Keyword arguments provided to a generic function with
    EQL-specialized methods are checked more correctly (reported by Syll,
    lp#1760987)

changes in sbcl-1.4.6 relative to sbcl-1.4.5:
  * enhancement: DISASSEMBLE on a symbol naming a macro will disassemble
    the expander, not the code that traps attempted FUNCALL of the macro.
  * enhancement: The sb-sprof contrib now provides an experimental interface
    for accessing collected profiler data.
  * enhancement: The instruction-level profiling of the sb-prof contrib
    annotates the disassembler output more efficiently.
  * optimization: improved dynamic-extent handling of nested variables.

changes in sbcl-1.4.5 relative to sbcl-1.4.4:
  * minor incompatible change: building with/without the :sb-package-locks
    feature is no longer an option. Package locks are always compiled in,
    and removing :sb-package-locks from *features* will have no effect.
  * enhancement: FIND-PACKAGE does not acquire a mutex
  * enhancement: cheneygc can perform heap relocation on startup
  * enhancement: in threaded builds, finalizers execute in a system-internal
    thread so that a user thread which invokes GC is unblocked from performing
    work as soon it returns from GC and invokes any post-GC hooks.
    As such, it is more important than before to avoid assumptions about
    special variable bindings in finalizers, even in single-threaded code.
  * optimization: faster (funcall (or function symbol)) on x86-64.

changes in sbcl-1.4.4 relative to sbcl-1.4.3:
  * bug fix: pathname accessors such as PATHNAME-DIRECTORY work on
    SYNONYM-STREAMs.
  * bug fix: (pathname-{device,directory,name,type} ... :case :common) works